<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="kanghua818.com.calculator.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/screen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:padding="5dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/screen"
                android:textSize="70sp"
                android:gravity="center"
                android:maxLines="1"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:fadingEdge="horizontal"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="*">
                <TableRow
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/clearButton"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_span="4"
                        android:background="@drawable/clear_button"
                        android:text="@string/clear"
                        android:textColor="@android:color/background_light"
                        android:textSize="40sp"/>
                </TableRow>

                <TableRow
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/sevenButton"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@drawable/num_button"
                        android:text="@string/seven"
                        android:textSize="40sp"/>

                    <Button
                        android:id="@+id/eightButton"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@drawable/num_button"
                        android:text="@string/eight"
                        android:textSize="40sp"/>

                    <Button
                        android:id="@+id/nineButton"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@drawable/num_button"
                        android:text="@string/nine"
                        android:textSize="40sp"/>

                    <Button
                        android:id="@+id/divideButton"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@drawable/op_button"
                        android:text="@string/divide"
                        android:textColor="@android:color/background_light"
                        android:textSize="40sp"/>
                </TableRow>

                <TableRow
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/fourButton"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@drawable/num_button"
                        android:text="@string/four"
                        android:textSize="40sp"/>

                    <Button
                        android:id="@+id/fiveButton"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@drawable/num_button"
                        android:text="@string/five"
                        android:textSize="40sp"/>

                    <Button
                        android:id="@+id/sixButton"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@drawable/num_button"
                        android:text="@string/six"
                        android:textSize="40sp"/>

                    <Button
                        android:id="@+id/multiplyBbutton"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@drawable/op_button"
                        android:text="@string/multiply"
                        android:textColor="@android:color/background_light"
                        android:textSize="40sp"/>
                </TableRow>

                <TableRow
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <Button
                        android:id="@+id/oneButton"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@drawable/num_button"
                        android:text="@string/one"
                        android:textSize="40sp"/>

                    <Button
                        android:id="@+id/twoButton"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@drawable/num_button"
                        android:text="@string/two"
                        android:textSize="40sp"/>

                    <Button
                        android:id="@+id/threeButton"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@drawable/num_button"
                        android:text="@string/three"
                        android:textSize="40sp"/>


                    <Button
                        android:id="@+id/subtractButton"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@drawable/op_button"
                        android:text="@string/subtract"
                        android:textColor="@android:color/background_light"
                        android:textSize="40sp"/>
                </TableRow>

                <TableRow
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <Button
                        android:layout_span="2"
                        android:id="@+id/zeroButton"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@drawable/num_button"
                        android:text="@string/zero"
                        android:textSize="40sp"/>

                    <Button
                        android:id="@+id/equalButton"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@drawable/num_button"
                        android:text="@string/equal"
                        android:textSize="40sp"/>

                    <Button
                        android:id="@+id/addButton"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@drawable/op_button"
                        android:text="@string/add"
                        android:textColor="@android:color/background_light"
                        android:textSize="40sp"/>
                </TableRow>
            </TableLayout>
        </LinearLayout>

    </RelativeLayout>
</layout>
